<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/layoutStart"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:orientation="vertical"
		app:layout_constraintGuide_begin="@dimen/layout_spacing_16" />
	
	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/layoutEnd"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:orientation="vertical"
		app:layout_constraintGuide_end="@dimen/layout_spacing_16" />
	
	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/layoutTop"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:orientation="horizontal"
		app:layout_constraintGuide_begin="@dimen/layout_spacing_16" />
	
	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/layoutBottom"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:orientation="horizontal"
		app:layout_constraintGuide_end="@dimen/layout_spacing_16" />
	
	<com.google.android.material.textview.MaterialTextView
		android:id="@+id/enterNamesTitleText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/couple_names_editor_title"
		android:textSize="24sp"
		android:textStyle="bold"
		app:layout_constraintStart_toEndOf="@id/layoutStart"
		app:layout_constraintEnd_toStartOf="@id/layoutEnd"
		app:layout_constraintTop_toBottomOf="@id/layoutTop"
		app:layout_constraintBottom_toTopOf="@id/firstPlayerNameTextInputLayout"
		app:layout_constraintVertical_chainStyle="packed" />
	
	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/firstPlayerNameTextInputLayout"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/layout_spacing_8"
		android:layout_marginEnd="@dimen/layout_spacing_8"
		android:hint="@string/couple_names_editor_first_player_name_hint"
		app:layout_constraintStart_toEndOf="@id/layoutStart"
		app:layout_constraintEnd_toStartOf="@id/firstPlayerSexButtonsToggleGroup"
		app:layout_constraintTop_toBottomOf="@id/enterNamesTitleText"
		app:layout_constraintBottom_toTopOf="@id/secondPlayerNameTextInputLayout">
		
		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/firstPlayerNameTextInputEditText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />
	
	</com.google.android.material.textfield.TextInputLayout>
	
	<com.google.android.material.button.MaterialButtonToggleGroup
		android:id="@+id/firstPlayerSexButtonsToggleGroup"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintEnd_toStartOf="@id/layoutEnd"
		app:layout_constraintBottom_toBottomOf="@id/firstPlayerNameTextInputLayout"
		app:singleSelection="true"
		app:selectionRequired="true">
		
		<com.google.android.material.button.MaterialButton
			android:id="@+id/firstPlayerFemaleButton"
			style="@style/Widget.Material3.Button.OutlinedButton.IconOnly"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:icon="@drawable/ic_baseline_female_24" />
		
		<com.google.android.material.button.MaterialButton
			android:id="@+id/firstPlayerMaleButton"
			style="@style/Widget.Material3.Button.OutlinedButton.IconOnly"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:icon="@drawable/ic_baseline_male_24" />
	
	</com.google.android.material.button.MaterialButtonToggleGroup>
	
	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/secondPlayerNameTextInputLayout"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/layout_spacing_8"
		android:layout_marginEnd="@dimen/layout_spacing_8"
		android:hint="@string/couple_names_editor_second_player_name_hint"
		app:layout_constraintStart_toEndOf="@id/layoutStart"
		app:layout_constraintEnd_toStartOf="@id/secondPlayerSexButtonsToggleGroup"
		app:layout_constraintTop_toBottomOf="@id/firstPlayerNameTextInputLayout"
		app:layout_constraintBottom_toTopOf="@id/nextButton">
		
		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/secondPlayerNameTextInputEditText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />
	
	</com.google.android.material.textfield.TextInputLayout>
	
	<com.google.android.material.button.MaterialButtonToggleGroup
		android:id="@+id/secondPlayerSexButtonsToggleGroup"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintEnd_toStartOf="@id/layoutEnd"
		app:layout_constraintBottom_toBottomOf="@id/secondPlayerNameTextInputLayout"
		app:singleSelection="true"
		app:selectionRequired="true">
		
		<com.google.android.material.button.MaterialButton
			android:id="@+id/secondPlayerFemaleButton"
			style="@style/Widget.Material3.Button.OutlinedButton.IconOnly"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:icon="@drawable/ic_baseline_female_24" />
		
		<com.google.android.material.button.MaterialButton
			android:id="@+id/secondPlayerMaleButton"
			style="@style/Widget.Material3.Button.OutlinedButton.IconOnly"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:icon="@drawable/ic_baseline_male_24" />
	
	</com.google.android.material.button.MaterialButtonToggleGroup>
	
	<com.google.android.material.button.MaterialButton
		android:id="@+id/nextButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/layout_spacing_8"
		android:text="@string/couple_names_editor_next_button"
		app:layout_constraintStart_toEndOf="@id/layoutStart"
		app:layout_constraintEnd_toStartOf="@id/layoutEnd"
		app:layout_constraintTop_toBottomOf="@id/secondPlayerNameTextInputLayout"
		app:layout_constraintBottom_toTopOf="@id/layoutBottom" />

</androidx.constraintlayout.widget.ConstraintLayout>